--- a/containers/host/Dockerfile
+++ b/containers/host/Dockerfile
@@ -6,6 +6,7 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update
 
 RUN apt-get install -y openssh-server
+RUN mkdir -p /var/run/sshd
 
 EXPOSE 22
 
