Allow skipping of containers and copy whole FS from data

--- a/containers/host/Dockerfile
+++ b/containers/host/Dockerfile
@@ -1,14 +1,17 @@
-ARG UBUNTU_VERSION=${UBUNTU_VERSION}
-FROM ubuntu:${UBUNTU_VERSION}
+ARG ARG_UBUNTU_VERSION=${ARG_UBUNTU_VERSION}
+FROM ubuntu:${ARG_UBUNTU_VERSION}
+
+# copy everything from global to container root
+COPY data /
 
 # ensure the mountpoint exists
 RUN mkdir -p /mnt/data
 
 # user creation
-ARG USER_ID=${USER_ID}
-ARG GROUP_ID=${GROUP_ID}
-RUN if ! getent group ${GROUP_ID} &> /dev/null; then groupadd -g ${GROUP_ID} development; fi \
- && useradd -u ${USER_ID} -g ${GROUP_ID} -G 100,27 -m -d /home/development -s /bin/bash development \
+ARG ARG_USER_ID=${ARG_USER_ID}
+ARG ARG_GROUP_ID=${ARG_GROUP_ID}
+RUN if ! getent group ${ARG_GROUP_ID} &> /dev/null; then groupadd -g ${ARG_GROUP_ID} development; fi \
+ && useradd -u ${ARG_USER_ID} -g ${ARG_GROUP_ID} -G 100,27 -m -d /home/development -s /bin/bash development \
  && echo 'development:development' | chpasswd
 
 # completely disable IPv6
@@ -26,14 +29,18 @@ RUN apt-get update \
  && localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
 ENV LANG en_US.utf8
 
+# gitting guud
+RUN apt-get update \
+ && apt-get install -y git git-lfs git-flow zip
+
 # install development dependencies
 RUN apt-get update \
- && apt-get install --no-install-recommends --no-install-suggests -y composer nodejs npm git zip unzip php-zip php-curl \
+ && apt-get install --no-install-recommends --no-install-suggests -y composer nodejs npm unzip php-zip php-curl file \
  && npm update -g npm -v
 
 # install administrative tools
 RUN apt-get update \
- && apt-get install --no-install-recommends --no-install-suggests -y sudo lnav htop
+ && apt-get install --no-install-recommends --no-install-suggests -y sudo lnav htop iputils-ping peco
 
 # install sshd
 RUN apt-get update \
