--- a/containers/host/compose.yml
+++ b/containers/host/compose.yml
@@ -4,27 +4,32 @@ container-host:
   hostname: docker-host
   restart: unless-stopped
   build:
-    context: ./
-    dockerfile: ./containers/host/Dockerfile
     args:
       - ARG_USER_ID=${USER_ID}
       - ARG_GROUP_ID=${GROUP_ID}
       - ARG_UBUNTU_VERSION=${UBUNTU_VERSION}
       - ARG_HOST_DEPENDENCIES=${HOST_DEPENDENCIES}
+    context: ./
+    dockerfile: ./containers/host/Dockerfile
+    network: host
   volumes: &host-volumes
+    - /etc/localtime:/etc/localtime:ro
     - ./config/hosts:/etc/hosts
     - type: bind
       source: ${DATA_DIR}
       target: /mnt/data
     - type: bind
-      source: ${USER_SSH_DIR:-/tmp}
-      target: /home/development/.ssh
-    - type: bind
       source: ${USER_CACHE_DIR:-/tmp}
       target: /home/development/.cache
     - type: bind
+      source: ${USER_CONFIG_DIR:-/tmp}
+      target: /home/development/.config
+    - type: bind
       source: ${USER_HIST_FILE:-/tmp/.dockerw_history}
       target: /home/development/.bash_history
+    - type: bind
+      source: ${USER_SSH_DIR:-/tmp}
+      target: /home/development/.ssh
     - type: bind
       source: ./logs
       target: /var/log
