--- a/templates/volumes.yml
+++ b/templates/volumes.yml
@@ -27,11 +27,11 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: ./logs
+      device: ${DOCKERW_DIR}/logs
       o: bind
   shared:
     driver: local
     driver_opts:
       type: none
-      device: ./shared
+      device: ${DOCKERW_DIR}/shared
       o: bind
