--- a/templates/compose.yml
+++ b/templates/compose.yml
@@ -1,7 +1,7 @@
 container-${container_name}:
   image: \${INSTANCE_NAME:-unnamed}:${container_name}\${${container_from_name^^}_VERSION}
   container_name: \${INSTANCE_NAME:-unnamed}-${container_name}\${${container_from_name^^}_VERSION}
-  hostname: ${container_name}
+  hostname: ${container_name}.${INSTANCE_NAME:-unnamed}.local
   restart: unless-stopped
   working_dir: ${working_dir}
   network_mode: host
